updated the css to remove the gears logo to fix the banner pushing down on smaller devices

--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ pre {
   margin-top: -1.1rem;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 420px) {
 
   #brand-logo {
     display: none;
